# airthings-sdk

./: .editorconfig  .gitignore  .terraformrc  LICENSE  Makefile  README.md  atlantis.yaml  aws_account_ids.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto-release.yml
.github/workflows/: auto-release.yml  ci.yml  terratest.yml  tflint.yml  tfsec.yml
api/python/: .gitignore  Makefile  README.md  config.yaml  const.py  fetch_all_devices.py  generate_client.sh  openapi.yaml  pyproject.toml
api/python/airthings-sdk/: README.md  config.yaml  pyproject.toml
api/python/airthings-sdk/airthings_api_client/: __init__.py
api/python/airthings-sdk/airthings_api_client/api/device/: get_devices.py
api/python/airthings-sdk/airthings_api_client/api/health/: get_health.py
api/python/airthings-sdk/airthings_api_client/api/sensor/: get_multiple_sensors.py
api/python/airthings-sdk/airthings_api_client/models/: account_response.py  accounts_response.py  device_response.py  devices_response.py  error.py  get_multiple_sensors_response_200.py  get_multiple_sensors_unit.py
api/python/airthings-sdk/airthings_sdk/: __init__.py  const.py  mapper.py  types.py
api/python/airthings-sdk/examples/: fetch_devices_and_sensors.py
api/python/airthings_api_client/: types.py
api/python/airthings_api_client/api/accounts/: get_accounts_ids.py
api/python/airthings_api_client/api/device/: get_devices.py
api/python/airthings_api_client/api/health/: get_health.py
api/python/airthings_api_client/api/sensor/: get_multiple_sensors.py
api/python/airthings_api_client/models/: __init__.py  accounts_response.py  devices_response.py  get_multiple_sensors_response_200.py  sensor_response.py  sensor_response_type_0.py  sensors_response.py
api/python/airthings_for_consumer_api_client/: __init__.py
api/python/airthings_for_consumer_api_client/api/device/: get_devices.py
api/python/airthings_for_consumer_api_client/api/sensor/: get_multiple_sensors.py
api/python/airthings_for_consumer_api_client/models/: account_response.py  device_response.py  error.py
api/python/airthings_for_consumer_api_client/parser/: __init__.py  parser.py
api/python/airthings_sdk/: __init__.py  errors.py  mapper.py  parser.py  types.py
api/python/examples/: fetch_devices_and_sensors.py
api/python/parser/: __init__.py  parser.py
infra/test/: examples_test.go  go.mod
