[project]
name = "airthings-sdk"
version = "1.0.0"
description = "A client library for accessing Airthings for Consumer"
authors = []
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
    "attrs>=26,<27",
    "python-dateutil>=2.9.0,<3.0.0",
]

[tool.poetry]
packages = [
    {include = "airthings_api_client"},
    {include = "airthings_sdk"},
]
include = ["airthings_api_client/py.typed"]

[tool.poetry.group.dev.dependencies]
pylint = "^4.0.0"
black = "^26.0.0"
mypy = "^1.20.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = ["airthings_api_client"]

[tool.ruff.lint]
select = ["F", "I", "UP"]
ignore = ["UP007"]  # openapi-python-client generates Union[] that ruff can't auto-fix
